# namirs

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  simple_linreg_salary.csv
docs/example/: linreg.toml
include/: data_table.h  helper.h  sgd_regressor.h  train.h
src/: data_table.cpp  helper.cpp  main.c  main.cpp  sgd_regressor.cpp  train.cpp
